cmake_minimum_required(VERSION 3.10)
#==============================================================================

find_package(PythonInterp REQUIRED)
find_package(PythonLibs REQUIRED)

#add_subdirectory(pybind11)
#pybind11_add_module(pymedusa src/main.cpp)
#target_link_libraries(pymedusa PRIVATE libMedusa.a)